base.core/src/main/java/eapli/base/question/grammar/QuestionGrammarParser.java
// Generated from QuestionGrammar.g4 by ANTLR 4.12.0
package eapli.base.question.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QuestionGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, QUESTION_DEFINITION_SYMBOL=11, PERCENTAGE=12, OPEN_BRACKET=13, 
		CLOSING_BRACKET=14, ANSWER_SPACING=15, CORRECT_ANSWER_SYMBOL=16, WRONG_ANSWER_SYMBOL=17, 
		FEEDBACK_SYMBOL=18, END_SYMBOL=19, INT=20, PUNCTUATION=21, OPERATIONS=22, 
		SENTENCE=23, WORD=24, WHITESPACE=25, NEWLINE=26;
	public static final int
		RULE_start = 0, RULE_question = 1, RULE_question_header = 2, RULE_question_grade = 3, 
		RULE_matching_question = 4, RULE_multiple_choice_question = 5, RULE_open_question = 6, 
		RULE_missing_words_question = 7, RULE_true_false_question = 8, RULE_matching_question_definition = 9, 
		RULE_multiple_choice_definition = 10, RULE_open_questions_definition = 11, 
		RULE_missing_words_definition = 12, RULE_true_false_definition = 13, RULE_subquestion = 14, 
		RULE_wrong_answer = 15, RULE_correct_answer = 16, RULE_answer_list = 17, 
		RULE_open_questions_answer = 18, RULE_open_questions_answer_list = 19, 
		RULE_matching_answers = 20, RULE_true_false_answer = 21, RULE_true_false = 22, 
		RULE_feedback = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "question", "question_header", "question_grade", "matching_question", 
			"multiple_choice_question", "open_question", "missing_words_question", 
			"true_false_question", "matching_question_definition", "multiple_choice_definition", 
			"open_questions_definition", "missing_words_definition", "true_false_definition", 
			"subquestion", "wrong_answer", "correct_answer", "answer_list", "open_questions_answer", 
			"open_questions_answer_list", "matching_answers", "true_false_answer", 
			"true_false", "feedback"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'matching'", "'multiple choice'", "'short'", "'numerical'", "'missing words'", 
			"'true/false'", "'T'", "'F'", "'TRUE'", "'FALSE'", null, null, null, 
			"'}'", "'___'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "QUESTION_DEFINITION_SYMBOL", 
			"PERCENTAGE", "OPEN_BRACKET", "CLOSING_BRACKET", "ANSWER_SPACING", "CORRECT_ANSWER_SYMBOL", 
			"WRONG_ANSWER_SYMBOL", "FEEDBACK_SYMBOL", "END_SYMBOL", "INT", "PUNCTUATION", 
			"OPERATIONS", "SENTENCE", "WORD", "WHITESPACE", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuestionGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(QuestionGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			question();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public Matching_questionContext matching_question() {
			return getRuleContext(Matching_questionContext.class,0);
		}
		public Multiple_choice_questionContext multiple_choice_question() {
			return getRuleContext(Multiple_choice_questionContext.class,0);
		}
		public Open_questionContext open_question() {
			return getRuleContext(Open_questionContext.class,0);
		}
		public Missing_words_questionContext missing_words_question() {
			return getRuleContext(Missing_words_questionContext.class,0);
		}
		public True_false_questionContext true_false_question() {
			return getRuleContext(True_false_questionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(51);
				matching_question();
				}
				break;
			case 2:
				{
				setState(52);
				multiple_choice_question();
				}
				break;
			case 3:
				{
				setState(53);
				open_question();
				}
				break;
			case 4:
				{
				setState(54);
				missing_words_question();
				}
				break;
			case 5:
				{
				setState(55);
				true_false_question();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_headerContext extends ParserRuleContext {
		public TerminalNode SENTENCE() { return getToken(QuestionGrammarParser.SENTENCE, 0); }
		public TerminalNode END_SYMBOL() { return getToken(QuestionGrammarParser.END_SYMBOL, 0); }
		public Question_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterQuestion_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitQuestion_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitQuestion_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_headerContext question_header() throws RecognitionException {
		Question_headerContext _localctx = new Question_headerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_question_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(SENTENCE);
			setState(59);
			match(END_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_gradeContext extends ParserRuleContext {
		public TerminalNode QUESTION_DEFINITION_SYMBOL() { return getToken(QuestionGrammarParser.QUESTION_DEFINITION_SYMBOL, 0); }
		public TerminalNode INT() { return getToken(QuestionGrammarParser.INT, 0); }
		public TerminalNode END_SYMBOL() { return getToken(QuestionGrammarParser.END_SYMBOL, 0); }
		public Question_gradeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_grade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterQuestion_grade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitQuestion_grade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitQuestion_grade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_gradeContext question_grade() throws RecognitionException {
		Question_gradeContext _localctx = new Question_gradeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_question_grade);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(QUESTION_DEFINITION_SYMBOL);
			setState(62);
			match(INT);
			setState(63);
			match(END_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Matching_questionContext extends ParserRuleContext {
		public Matching_question_definitionContext matching_question_definition() {
			return getRuleContext(Matching_question_definitionContext.class,0);
		}
		public Question_gradeContext question_grade() {
			return getRuleContext(Question_gradeContext.class,0);
		}
		public Question_headerContext question_header() {
			return getRuleContext(Question_headerContext.class,0);
		}
		public Matching_answersContext matching_answers() {
			return getRuleContext(Matching_answersContext.class,0);
		}
		public Matching_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterMatching_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitMatching_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitMatching_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Matching_questionContext matching_question() throws RecognitionException {
		Matching_questionContext _localctx = new Matching_questionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matching_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			matching_question_definition();
			setState(66);
			question_grade();
			setState(67);
			question_header();
			setState(68);
			matching_answers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_choice_questionContext extends ParserRuleContext {
		public Multiple_choice_definitionContext multiple_choice_definition() {
			return getRuleContext(Multiple_choice_definitionContext.class,0);
		}
		public Question_gradeContext question_grade() {
			return getRuleContext(Question_gradeContext.class,0);
		}
		public Question_headerContext question_header() {
			return getRuleContext(Question_headerContext.class,0);
		}
		public Answer_listContext answer_list() {
			return getRuleContext(Answer_listContext.class,0);
		}
		public Multiple_choice_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterMultiple_choice_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitMultiple_choice_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitMultiple_choice_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choice_questionContext multiple_choice_question() throws RecognitionException {
		Multiple_choice_questionContext _localctx = new Multiple_choice_questionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multiple_choice_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			multiple_choice_definition();
			setState(71);
			question_grade();
			setState(72);
			question_header();
			setState(73);
			answer_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Open_questionContext extends ParserRuleContext {
		public Open_questions_definitionContext open_questions_definition() {
			return getRuleContext(Open_questions_definitionContext.class,0);
		}
		public Question_gradeContext question_grade() {
			return getRuleContext(Question_gradeContext.class,0);
		}
		public Question_headerContext question_header() {
			return getRuleContext(Question_headerContext.class,0);
		}
		public Open_questions_answer_listContext open_questions_answer_list() {
			return getRuleContext(Open_questions_answer_listContext.class,0);
		}
		public Open_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_open_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterOpen_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitOpen_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitOpen_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Open_questionContext open_question() throws RecognitionException {
		Open_questionContext _localctx = new Open_questionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_open_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			open_questions_definition();
			setState(76);
			question_grade();
			setState(77);
			question_header();
			setState(78);
			open_questions_answer_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Missing_words_questionContext extends ParserRuleContext {
		public Missing_words_definitionContext missing_words_definition() {
			return getRuleContext(Missing_words_definitionContext.class,0);
		}
		public Question_gradeContext question_grade() {
			return getRuleContext(Question_gradeContext.class,0);
		}
		public Question_headerContext question_header() {
			return getRuleContext(Question_headerContext.class,0);
		}
		public List<SubquestionContext> subquestion() {
			return getRuleContexts(SubquestionContext.class);
		}
		public SubquestionContext subquestion(int i) {
			return getRuleContext(SubquestionContext.class,i);
		}
		public List<Answer_listContext> answer_list() {
			return getRuleContexts(Answer_listContext.class);
		}
		public Answer_listContext answer_list(int i) {
			return getRuleContext(Answer_listContext.class,i);
		}
		public Missing_words_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missing_words_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterMissing_words_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitMissing_words_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitMissing_words_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Missing_words_questionContext missing_words_question() throws RecognitionException {
		Missing_words_questionContext _localctx = new Missing_words_questionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_missing_words_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			missing_words_definition();
			setState(81);
			question_grade();
			setState(82);
			question_header();
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				subquestion();
				setState(84);
				answer_list();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SENTENCE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_false_questionContext extends ParserRuleContext {
		public True_false_definitionContext true_false_definition() {
			return getRuleContext(True_false_definitionContext.class,0);
		}
		public Question_gradeContext question_grade() {
			return getRuleContext(Question_gradeContext.class,0);
		}
		public Question_headerContext question_header() {
			return getRuleContext(Question_headerContext.class,0);
		}
		public List<SubquestionContext> subquestion() {
			return getRuleContexts(SubquestionContext.class);
		}
		public SubquestionContext subquestion(int i) {
			return getRuleContext(SubquestionContext.class,i);
		}
		public List<True_false_answerContext> true_false_answer() {
			return getRuleContexts(True_false_answerContext.class);
		}
		public True_false_answerContext true_false_answer(int i) {
			return getRuleContext(True_false_answerContext.class,i);
		}
		public True_false_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterTrue_false_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitTrue_false_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitTrue_false_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_false_questionContext true_false_question() throws RecognitionException {
		True_false_questionContext _localctx = new True_false_questionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_true_false_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			true_false_definition();
			setState(91);
			question_grade();
			setState(92);
			question_header();
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				subquestion();
				setState(94);
				true_false_answer();
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SENTENCE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Matching_question_definitionContext extends ParserRuleContext {
		public TerminalNode QUESTION_DEFINITION_SYMBOL() { return getToken(QuestionGrammarParser.QUESTION_DEFINITION_SYMBOL, 0); }
		public TerminalNode END_SYMBOL() { return getToken(QuestionGrammarParser.END_SYMBOL, 0); }
		public Matching_question_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching_question_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterMatching_question_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitMatching_question_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitMatching_question_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Matching_question_definitionContext matching_question_definition() throws RecognitionException {
		Matching_question_definitionContext _localctx = new Matching_question_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_matching_question_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(QUESTION_DEFINITION_SYMBOL);
			setState(101);
			match(T__0);
			setState(102);
			match(END_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_choice_definitionContext extends ParserRuleContext {
		public TerminalNode QUESTION_DEFINITION_SYMBOL() { return getToken(QuestionGrammarParser.QUESTION_DEFINITION_SYMBOL, 0); }
		public TerminalNode END_SYMBOL() { return getToken(QuestionGrammarParser.END_SYMBOL, 0); }
		public Multiple_choice_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterMultiple_choice_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitMultiple_choice_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitMultiple_choice_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choice_definitionContext multiple_choice_definition() throws RecognitionException {
		Multiple_choice_definitionContext _localctx = new Multiple_choice_definitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_multiple_choice_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(QUESTION_DEFINITION_SYMBOL);
			setState(105);
			match(T__1);
			setState(106);
			match(END_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Open_questions_definitionContext extends ParserRuleContext {
		public TerminalNode QUESTION_DEFINITION_SYMBOL() { return getToken(QuestionGrammarParser.QUESTION_DEFINITION_SYMBOL, 0); }
		public TerminalNode END_SYMBOL() { return getToken(QuestionGrammarParser.END_SYMBOL, 0); }
		public Open_questions_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_open_questions_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).enterOpen_questions_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionGrammarListener ) ((QuestionGrammarListener)listener).exitOpen_questions_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionGrammarVisitor ) return ((QuestionGrammarVisitor<? extends T>)visitor).visitOpen_questions_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Open_questions_definitionContext open_questions_definition() throws RecognitionException {
		Open_questions_definitionContext _localctx = new Open_questions_definitionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_open_questions_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(QUESTION_DEFINITION_SYMBOL);
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(110);
			match(END_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
